clusters/home/apps/vaultwarden/app/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
  namespace: vaultwarden
  annotations:
    external-dns.alpha.kubernetes.io/enabled: "true"
    external-dns.alpha.kubernetes.io/hostname: "vault.layertwo.dev"
    external-dns.alpha.kubernetes.io/target: "proxy-internal.layertwo.dev"
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    kubernetes.io/ingress.class: internal
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`vault.layertwo.dev`)
    kind: Rule
    services:
    - name: vaultwarden
      port: 80
  - match: Host(`vault.layertwo.dev`) && Path(`/notifications/hub`)
    kind: Rule
    services:
    - name: vaultwarden
      port: 3012
